--- a/practica02css3/css/estilos.css
+++ b/practica02css3/css/estilos.css
@@ -25,6 +25,11 @@ header nav ul li{
 	padding-bottom: 2px;
 	/*text-decoration: underline;*/
 }
+#bgoffer{
+	left: -35px;
+	top: -410px;
+	position: relative;
+}
 #granthams{
 	margin-top: 25px;
 	margin-left: 25px;
@@ -32,6 +37,53 @@ header nav ul li{
 #paint{
 	float: right;
 }
+#primerseccion{
+	/*border: 1px solid orange;*/
+	margin-top: 60px;
+}
+#primerseccion article{
+	/*border: 1px solid red;*/
+	display: inline-block;
+	vertical-align: top;
+}
+#secc01art01{
+	margin-left: 30px;
+	width: 61%;
+}
+#secc01art02{
+	margin-left: 50px;
+	width: 30%;
+}
+#secc01art02 ul{
+	/*Quitamos viñetas (bullets)*/
+	list-style: none;
+}
+#secc01art02 ul li:before{
+	color: #FF0099;
+	content: "• ";
+}
+.colorrosa{
+	color: #FF0099;
+}
+.letragrande{
+	font-size: 3.5em; /* 16 x 3.5 */ 
+}
+.nito{
+	font-weight: bold; /*negrita*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
